<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Education.EducationFragment"
    android:background="@color/Raspberry">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/book" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/WhiteText"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            android:textSize="20sp"
            android:text="@string/education_header_text" />

        <Button
            android:id="@+id/cyberbullying_definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:drawableLeft="@drawable/cyberbully_icon_resized"
            android:background="@color/blue_1"
            android:text="@string/cyberbully_definition"
            android:textAlignment="textStart"
            />

        <Button
            android:id="@+id/cyberbully_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:drawableLeft="@drawable/cyberbully_people_resized"
            android:background="@color/blue_1"
            android:text="@string/cyberbully_sign_header"
            android:textAlignment="textStart"
            />

        <Button
            android:id="@+id/cyberbullied_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:drawableLeft="@drawable/cyberbulied_people_resized"
            android:background="@color/blue_1"
            android:text="@string/cyberbullied_sign_header"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/cyberbully_prevention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:drawableLeft="@drawable/cyberbully_prevention_resized"
            android:background="@color/blue_1"
            android:text="@string/cyberbully_prevention_header"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/dealing_with_cyberbully"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:drawableLeft="@drawable/cyberbully_dealing_resized"
            android:background="@color/blue_1"
            android:text="@string/dealing_with_cyberbully_header"/>



    </LinearLayout>

</ScrollView>